// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonReport renders baseline report with competitors correctly 1`] = `
"<Container className=\\"common-report\\">
  <LeasingPerformanceReport report={{...}} sectionItems={[undefined]} />
  <CampaignInvestmentReport report={{...}} />
  <AcquisitionFunnelReport report={{...}} type=\\"baseline\\" />
  <BaselineComparisonMatrix report={{...}} />
</Container>"
`;

exports[`CommonReport renders baseline report without competitor correctly 1`] = `
"<Container className=\\"common-report\\">
  <LeasingPerformanceReport report={{...}} sectionItems={[undefined]} />
  <CampaignInvestmentReport report={{...}} />
  <AcquisitionFunnelReport report={{...}} type=\\"baseline\\" />
</Container>"
`;
